[package]
name = "flow-sensor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flow-sensor"
path = "src/main.rs"

[dependencies]
tokio = { version = "=1.35.1", features = ["full"] }
flow-sensor-common = { path = "../flow-sensor-common", features = ["std"] }
clap = { version = "=4.4.18", features = ["derive"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }
serde = { version = "=1.0.195", features = ["derive"] }
serde_json = "=1.0.111"
anyhow = "=1.0.79"
nix = { version = "=0.27.1", features = ["user"] }

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13.1", features = ["async_tokio"] }
